apply plugin: 'java'
apply plugin: 'maven'
apply plugin: 'jacoco'

version = '1.0.0'
archivesBaseName = 'utils'
group = 'com.uniquid'

sourceCompatibility = 1.8
targetCompatibility = 1.8

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

task sourcesJar(type: Jar, dependsOn: classes) {
    classifier = 'sources'
    from sourceSets.main.allSource
}

artifacts {
    archives sourcesJar
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    compile group: 'org.slf4j', name: 'slf4j-api', version:'1.7.22'
    compile group: 'org.bitcoinj', name: 'bitcoinj-core-uniquid', version:'0.15-SNAPSHOT'
    compile group: 'org.json', name: 'json', version:'20170516'
    compile group: 'org.fusesource.mqtt-client', name: 'mqtt-client', version:'1.12'
    compile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.1.0'
    compile group: 'org.eclipse.jetty', name: 'jetty-annotations', version:'9.4.12.v20180830'
    compile group: 'org.eclipse.jetty', name: 'jetty-webapp', version:'9.4.12.v20180830'
    compile group: 'org.eclipse.jetty', name: 'apache-jsp', version:'9.4.12.v20180830'
    compile group: 'org.eclipse.jetty', name: 'apache-jstl', version:'9.4.12.v20180830'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version:'2.9.0'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.9.0'
    testCompile group: 'junit', name: 'junit', version:'4.8.2'
}

test {
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    reports {
        xml.enabled false
        csv.enabled false
        html.destination "${buildDir}/jacocoHtml"
    }
}